add update logic, flesh out API designer

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,6 +9,7 @@
   --button-background-color: #1a1a1a;
   --standard-border: .2rem solid rgba(204, 204, 204, .25);
   --standard-border-radius: .5rem;
+  --standard-error-color: #eb0f46;
 
   /* color-scheme: light dark; */
   color: var(--primary-font-color);
