--- a/app/src/components/style/Designer.css
+++ b/app/src/components/style/Designer.css
@@ -1,7 +1,3 @@
-.designer {
-  /* overflow: scroll; */
-}
-
 .spec-designer {
   border: var(--standard-border);
   border-radius: var(--standard-border-radius);
@@ -11,6 +7,8 @@
   min-width: 10rem;
   min-height: 5rem;
   flex-direction: column;
+  justify-content: space-between;
+  gap: .25rem;
 }
 
 .sequential-spec {
@@ -64,6 +62,12 @@
 .form-element {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.form-element.text {
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .form-element label {
@@ -73,15 +77,35 @@
   width: 5rem;
 }
 
-.form-element .var-name-input {
+.form-element.text label {
+  text-align: left;
+  width: 100%;
+}
+
+.form-element.error label {
+  color: var(--standard-error-color);
+}
+
+.form-element .var-name-input, .form-element textarea {
   background-color: var(--main-background-color);
   color: #dadada;
-  border: none;
+  border: var(--standard-border);
+  border-width: .1rem;
   font-family: Georgia, serif;
   font-weight: 600;
   font-size: 1rem;
   text-align: left;
   margin: 0;
+  padding: .25em;
+}
+
+.form-element textarea {
+  min-width: 18rem;
+  min-height: 5rem;
+}
+
+.form-element.error textarea {
+  border-color: var(--standard-error-color);
 }
 
 .case-spec {
