load revision from server into app

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -64,6 +64,13 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+button:disabled:hover {
+  border-color: transparent;
+}
 
 /* @media (prefers-color-scheme: light) {
   :root {
