--- a/app/src/components/style/Designer.css
+++ b/app/src/components/style/Designer.css
@@ -37,13 +37,13 @@
   margin: 0;
   line-height: 1.5em;
   overflow: scroll;
+  min-width: 18rem;
 }
 
 .llm-spec .prompt-input {
   background: none;
   color: rgba(0,0,0,0);
   caret-color: #ffffff;
-  min-width: 17.6em;
 }
 
 .llm-spec .prompt-display {
@@ -51,7 +51,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: calc(100% - 4px);
 }
 
@@ -63,6 +62,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .form-element.text {
