--- a/app/src/components/style/Designer.css
+++ b/app/src/components/style/Designer.css
@@ -1,3 +1,12 @@
+
+.designer.interacting {
+  padding-right: 35rem;
+}
+
+.designer {
+  padding-top: 5rem;
+}
+
 .spec-designer {
   border: var(--standard-border);
   border-radius: var(--standard-border-radius);
@@ -151,6 +160,8 @@
   font-family: Georgia, serif;
   font-weight: 700;
   font-size: .8rem;
+  width: 100%;
+  margin-bottom: .5rem;
 }
 
 .reformat-spec .formatters {
