--- a/app/src/components/style/Header.css
+++ b/app/src/components/style/Header.css
@@ -4,28 +4,28 @@
   width: 100%;
   top: 0;
   left: 0;
-  padding: 1rem 2rem 0;
-  height: 4rem;
+  padding: 1rem 2rem;
+  height: 5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: rgba(150, 150, 150, .1);
+  backdrop-filter: blur(5px) opacity(1);
+  z-index: 1;
+  border-bottom: .05rem solid rgba(204, 204, 204, .25);
 }
 
 .header .chain-name {
-  background-color: var(--main-background-color);
   color: #dadada;
-  border: var(--standard-border);
-  border-width: .1rem;
   font-family: Georgia, serif;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.2rem;
-  text-align: left;
+  text-align: center;
   margin: 0;
   padding: .25em;
-  min-width: 12em;
 }
 
-.header .actions {
+.header .actions, .header .file-options {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
