--- a/app/src/components/style/TextModal.css
+++ b/app/src/components/style/TextModal.css
@@ -52,3 +52,8 @@
 .text-modal.open .text-modal-selector {
   display: flex;
 }
+
+.error-message {
+  background-color: red;
+  text-align: left;
+}
