--- a/app/src/components/style/Header.css
+++ b/app/src/components/style/Header.css
@@ -1,8 +1,5 @@
 .header {
-  position: fixed;
   box-sizing: border-box;
-  width: 100%;
-  top: 0;
   left: 0;
   padding: 1rem 2rem;
   height: 5rem;
@@ -31,4 +28,17 @@
   justify-content: space-between;
   align-items: center;
   gap: 1em;
+}
+
+.page-top {
+  top:0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+}
+
+.error-message {
+  display: block;
+  background-color: red;
+  text-align: left;
 }
