--- a/app/src/components/style/Interaction.css
+++ b/app/src/components/style/Interaction.css
@@ -27,7 +27,7 @@
 
 .interaction .close {
   position: fixed;
-  top: 1rem;
+  margin-top: 1rem;
   left: 1rem;
 }
 
@@ -158,6 +158,18 @@
   left: 3.5rem;
   animation: lds-ellipsis3 0.6s linear infinite;
 }
+.interaction .page-top {
+  top:0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+}
+.interaction .error-message {
+  display: block;
+  background-color: red;
+  text-align: left;
+}
+
 @keyframes lds-ellipsis1 {
   0% {
     transform: scale(0);
@@ -182,3 +194,5 @@
     transform: translate(1.5rem, 0);
   }
 }
+
+
