Fixed to use langchain's TransformChain. Removed "variables", updateTransformFunc and formatReducer from Designer Changed the editor to a TextArea

--- a/app/src/components/style/Designer.css
+++ b/app/src/components/style/Designer.css
@@ -100,7 +100,7 @@
   color: var(--standard-error-color);
 }
 
-.form-element .var-name-input, .var-name-output, .form-element .text-input, .form-element textarea {
+.form-element .var-name-input, .form-element .text-input, .form-element textarea {
   background-color: var(--main-background-color);
   color: #dadada;
   border: var(--standard-border);
@@ -113,7 +113,7 @@
   padding: .5em;
 }
 
-.form-element .var-name-input, var-name-output {
+.form-element .var-name-input {
   color: var(--variable-name-color);
   border: none;
 }
@@ -224,4 +224,9 @@
 
 .designer .delete-spec .quick-menu-selector {
   top: 0;
+}
+
+.transform-func {
+  color: #fff !important;
+
 }
