--- a/app/src/components/style/ImportChain.css
+++ b/app/src/components/style/ImportChain.css
@@ -2,10 +2,10 @@
 .chain-import-modal {
   display: none; /* Initially hide the modal */
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 40vh;
+  left: 36vw;
+  width: 28vw;
+  height: 20vh;
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
   z-index: 1000;
 }
@@ -17,7 +17,7 @@
 }
 
 .modal-content {
-  background-color: #fff;
+  background-color: #444;
   padding: 20px;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
