--- a/app/src/components/style/Designer.scss
+++ b/app/src/components/style/Designer.scss
@@ -6,6 +6,11 @@
   &.interacting {
     padding-right: 35rem;
   }
+
+  .add-llm {
+    margin: 0px auto;
+    background-color: #3A7734;
+  }
   
   .spec-designer {
     border: var(--standard-border);
