--- a/app/src/components/style/EditLLMs.scss
+++ b/app/src/components/style/EditLLMs.scss
@@ -55,6 +55,7 @@
     font-weight: 700;
     border-radius: 1.5em;
     padding-bottom: 0.25rem;
+    background-color: #ff0000;
   }
 
   .llms {
@@ -134,6 +135,36 @@
 
   .llm-param-value {
     color: #dadada;
+  }
+
+  .llm-function-text {
+    font-size: 0.75rem;
+    text-align: left;
+  }
+
+  .llm-function-add-button {
+    margin-right: .4rem;
+    align-self: flex-end;
+    padding: .2rem .5rem;
+  }
+
+  .llm-function-param-button {
+    margin: .4rem;
+    align-self: flex-end;
+    padding: .2rem .5rem;
+  }
+
+  .llms-modal {
+    padding: 0;
+    font-size: 1.5rem;
+    right: 2rem;
+    top: 1rem;
+    width: 3rem;
+    height: 3rem;
+    font-weight: 700;
+    border-radius: 1.5em;
+    padding-bottom: 0.25rem;
+    background-color: #ff0000;
   }
 
   .quick-menu .open-quick-menu {
